# zerocode

./: CMakeLists.txt  conanfile.py
.github/workflows/: ci.yml
cmake/: zerocode-config.cmake.in
src/zerocode/: zerocode.hxx
test_package/: CMakeLists.txt  conanfile.py  main.cpp
